<resources>
    <string name="app_name">Check-in</string>
    <string name="title_login">Đăng nhập</string>
    <string name="title_register">Đăng ký</string>
    <string name="title_continue">Lưu</string>
    <string name="title_password">Mật khẩu</string>
    <string name="title_mycourse">Khoá học</string>
    <string name="title_checkin">Điểm danh</string>
    <string name="title_update">Cập nhật thông tin</string>
    <string name="title_logout">Đăng xuất</string>
    <string name="title_confirm_password">Xác nhận mật khẩu</string>
    <string name="title_email">Email</string>
    <string name="title_name">Tên</string>
    <string name="title_birthday">Ngày sinh</string>
    <string name="msg_email_should_not_empty">Email không được bỏ trống!</string>
    <string name="msg_name_should_not_empty">Tên không được bỏ trống!</string>
    <string name="msg_password_should_not_empty">Mật khẩu không được bỏ trống!</string>
    <string name="msg_birthday_should_not_empty">Ngày sinh không được bỏ trống!</string>
    <string name="msg_email_not_match">Emai nhập không chính xác!</string>
    <string name="msg_wrong_email_or_password">Email hoặc mât khẩu không chính xác!</string>
    <string name="msg_something_went_wrong">Có lỗi! Vui lòng thử lại!</string>
    <string name="msg_check_internet_connection">Kiểm tra kết nối mạng!</string>
    <string name="msg_login_successful">Đăng nhập thành công!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="already_acount">Bạn đã có sắn một tài khoản ?</string>
    <string name="msg_confimpassword_should_match_password">Xác nhận mật khẩu không trùng với mật khẩu</string>
    <string name="birthday_should_match_dateformat">Ngày sinh không đúng định dạng (dd/MM/yyyy)</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="str_enter_code_course">Hãy nhập mã của khóa học</string>
    <string name="str_enroll">Tham gia</string>
    <string name="title_activity_chatlog">ChatlogActivity</string>
    <string name="str_send">Gửi</string>
    <string name="str_check_your_email">Kiểm tra email của bạn!</string>
    <string name="title_activity_test">Test</string>
</resources>
