<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.login.LoginActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_mycourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_mycourse"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dp_32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_checkin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_checkin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_mycourse"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_checkin"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_update"/>


    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_circular_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/bt_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>