<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_32"
        android:paddingEnd="@dimen/dp_32"
        android:paddingTop="@dimen/dp_48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_birthday"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_name"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_birthday"
                android:inputType="date"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        app:layout_constraintTop_toBottomOf="@id/constraintLayout"
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:src="@drawable/avatar"
            android:padding="8dp"
            android:id="@+id/aciv_img1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp" />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/aciv_img2"
            android:padding="8dp"
            android:src="@drawable/avatar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp" />
        <androidx.appcompat.widget.AppCompatImageView
            android:src="@drawable/avatar"
            android:padding="8dp"
            android:id="@+id/aciv_img3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_continue"
        android:layout_width="200dp"
        android:backgroundTint="@color/blue"
        android:layout_height="wrap_content"
        android:text="@string/title_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_circular_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/bt_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>